[gd_scene load_steps=2 format=3 uid="uid://nbi8hef0gp5t"]

[ext_resource type="Script" path="res://ManaComponent.gd" id="1_urxtc"]

[node name="ManaComponent" type="Node2D"]
script = ExtResource("1_urxtc")

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]
